# totp-cli

./: .gitignore  Cargo.toml  README.md
src/: chacha.rs  cli.rs  error.rs  file.rs  mac.rs  main.rs  otp.rs  path.rs  print.rs  time.rs  types.rs  util.rs
src/ops/: add.rs  add_gauth.rs  add_json.rs  add_url.rs  codes.rs  drop.rs  edit.rs  help.rs  mod.rs  new.rs  rename.rs  view.rs
