[package]
name = "totp-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = { version = "0.10.5" }
sha3 = { version = "0.10.6" }
hmac = { version = "0.12.1" }
rand = { version = "0.8.3", features = ["small_rng", "std"]}

data-encoding = { version = "2.3.2" }
base64 = { version = "0.13.0" }
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }
serde_yaml = { version = "0.8" }
url = { version = "2.3.1" }
percent-encoding = { version = "2.2.0" }