[package]
name = "totp-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.5"
sha3 = "0.10.6"
hmac = "0.12.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
hkdf = "0.12.3"
rand = { version = "0.9", features = ["small_rng", "std"] }

data-encoding = { version = "2.3.2" }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }
url = "2"
percent-encoding = { version = "2.2.0" }
serde_yml = "0.0.12"
